# rtamt-cpp

./: .clang-format  .clang-tidy  .gitignore  Doxyfile  README.md  format.sh  tidy.sh
examples/: CMakeLists.txt  example_basic.cpp  example_doc_1.cpp  example_doc_10.cpp  example_doc_2.cpp  example_doc_3.cpp  example_doc_4.cpp  example_doc_5.cpp  example_doc_6.cpp  example_doc_7.cpp  example_doc_8.cpp  example_doc_9.cpp  example_stl_specification_hpp.cpp  future_tl_spec_1000000_iters.cpp  parsing.cpp  past_tl_large_bounds_spec_100_iters.cpp  past_tl_spec_1000000_iters.cpp  simple_spec_1000000_iters.cpp  simple_spec_100000_iters.cpp  simple_spec_10000_iters.cpp  spec2dag.cpp
grammar/stl/: StlLexer.g4  StlParser.g4
source/: CMakeLists.txt  rtamt.kdev4
source/cmake/: clang-format.cmake  clang-tidy.cmake
source/grammar/: StlLexer.cpp  StlLexer.h  StlLexer.interp  StlParser.cpp  StlParser.h  StlParser.interp  StlParserBaseVisitor.cpp  StlParserBaseVisitor.h  StlParserVisitor.cpp  StlParserVisitor.h
source/node/: stl_abs_node.cpp  stl_abs_node.hpp  stl_addition_node.cpp  stl_addition_node.hpp  stl_always_bounded_node.cpp  stl_always_bounded_node.hpp  stl_always_node.cpp  stl_always_node.hpp  stl_and_node.hpp  stl_combinatorial_binary_node.cpp  stl_combinatorial_binary_node.hpp  stl_comp_op.hpp  stl_constant_node.cpp  stl_constant_node.hpp  stl_division_node.cpp  stl_division_node.hpp  stl_eventually_bounded_node.cpp  stl_eventually_bounded_node.hpp  stl_eventually_node.cpp  stl_eventually_node.hpp  stl_fall_node.cpp  stl_fall_node.hpp  stl_historically_bounded_node.cpp  stl_historically_bounded_node.hpp  stl_historically_node.cpp  stl_historically_node.hpp  stl_iff_node.hpp  stl_implies_node.hpp  stl_multiplication_node.cpp  stl_multiplication_node.hpp  stl_node.cpp  stl_node.hpp  stl_not_node.cpp  stl_not_node.hpp  stl_once_bounded_node.cpp  stl_once_bounded_node.hpp  stl_once_node.cpp  stl_once_node.hpp  stl_operator_type.hpp  stl_or_node.hpp  (+18 more)
source/rtamt/: stl_exception.hpp  stl_specification.cpp  stl_specification.hpp
source/spec/: stl_error_listener.hpp  stl_evaluation.cpp  stl_evaluation.hpp  stl_inner_specification.cpp  stl_inner_specification.hpp  stl_pastification.cpp  stl_pastification.hpp  stl_reset_monitor_state.cpp  stl_reset_monitor_state.hpp  stl_specification_parser.cpp  stl_specification_parser.hpp
source/visitor/: stl_visitor.hpp
test/: CMakeLists.txt  test-example.cpp
test/node/: test_node_evaluation.cpp  test_node_structure.cpp
test/rtamt/: test_stl_specification.cpp
test/spec/: test_parser_coverage.cpp  test_stl_evaluation.cpp  test_stl_pastification.cpp  test_stl_reset_monitor_state.cpp  test_stl_specification_parser.cpp  test_time_units.cpp
test/stl-inputs/: always_bounded_pass.stl  always_bounded_with_constant_fail.stl  always_eventually_predicate_fail.stl  always_predicate_pass.stl  always_short_predicate_pass.stl  bounded_response_pass.stl  conjunction_pass.stl  disjunction_pass.stl  eventually_bounded_pass.stl  historically_bounded_pass.stl  implication_and_fail.stl  implication_pass.stl  once_bounded_pass.stl  predicate_pass.stl  since_bounded_fail.stl  since_bounded_pass.stl  since_bounded_with_units_pass.stl  since_pass.stl  until_bounded_pass.stl
test/stl-semantic/: assignment_decl_incompatible.stl  build_a_tree.stl  const_no_assignment.stl  decreasing_time_interval.stl  identifier_already_defined.stl  time_unit_missing.stl
