cmake_minimum_required(VERSION 3.6.0 FATAL_ERROR) 

get_filename_component(ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/.. ABSOLUTE)
get_filename_component(ANTLR_DIR ${ROOT_DIR}/libs/antlr4 ABSOLUTE)

if ("$ENV{CODE_COVERAGE}" STREQUAL "ON")
    add_compile_options(-fprofile-arcs -ftest-coverage)
    set(CMAKE_EXE_LINKER_FLAGS "-fprofile-arcs -ftest-coverage")
endif ("$ENV{CODE_COVERAGE}" STREQUAL "ON")

project(rtamt-examples)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_C_EXTENSIONS OFF)

add_subdirectory("${ROOT_DIR}/source" rtamt)

include_directories(SYSTEM "${ROOT_DIR}/source")
include_directories(SYSTEM ${ANTLR_DIR}/runtime/src)

# own header files
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_executable(example_basic  example_basic.cpp)
add_executable(example_stl_specification_hpp  example_stl_specification_hpp.cpp)
add_executable(example_doc_1  example_doc_1.cpp)
add_executable(example_doc_2  example_doc_2.cpp)
add_executable(example_doc_3  example_doc_3.cpp)
add_executable(example_doc_4  example_doc_4.cpp)
add_executable(example_doc_5  example_doc_5.cpp)
add_executable(example_doc_6  example_doc_6.cpp)
add_executable(example_doc_7  example_doc_7.cpp)
add_executable(example_doc_8  example_doc_8.cpp)
add_executable(example_doc_9  example_doc_9.cpp)
add_executable(example_doc_10  example_doc_10.cpp)
add_executable(simple_spec_10000_iters  simple_spec_10000_iters.cpp)
add_executable(simple_spec_100000_iters  simple_spec_100000_iters.cpp)
add_executable(simple_spec_1000000_iters  simple_spec_1000000_iters.cpp)
add_executable(simple_spec_inf_iters  simple_spec_inf_iters.cpp)
add_executable(past_tl_spec_1000000_iters  past_tl_spec_1000000_iters.cpp)
add_executable(past_tl_large_bounds_spec_100_iters  past_tl_large_bounds_spec_100_iters.cpp)
add_executable(future_tl_spec_1000000_iters  future_tl_spec_1000000_iters.cpp)
add_executable(req_gnt_bound_1_iters_10  req_gnt_bound_1_iters_10.cpp)
add_executable(req_gnt_bound_1_iters_1000  req_gnt_bound_1_iters_1000.cpp)
add_executable(req_gnt_bound_1_iters_1000000  req_gnt_bound_1_iters_1000000.cpp)
add_executable(req_gnt_bound_10_iters_10  req_gnt_bound_10_iters_10.cpp)
add_executable(req_gnt_bound_10_iters_1000  req_gnt_bound_10_iters_1000.cpp)
add_executable(req_gnt_bound_10_iters_1000000  req_gnt_bound_10_iters_1000000.cpp)
add_executable(req_gnt_bound_1000_iters_10  req_gnt_bound_1000_iters_10.cpp)
add_executable(req_gnt_bound_1000_iters_1000  req_gnt_bound_1000_iters_1000.cpp)
add_executable(req_gnt_bound_1000_iters_10000  req_gnt_bound_1000_iters_10000.cpp)
add_executable(req_gnt_bound_1000_iters_1000000  req_gnt_bound_1000_iters_1000000.cpp)
add_executable(req_gnt_bound_100000_iters_10  req_gnt_bound_100000_iters_10.cpp)
add_executable(req_gnt_bound_1000000_iters_10  req_gnt_bound_1000000_iters_10.cpp)
add_executable(req_gnt_bound_1000000_iters_1000  req_gnt_bound_1000000_iters_1000.cpp)


target_link_libraries(example_basic rtamt)
target_link_libraries(example_stl_specification_hpp rtamt)
target_link_libraries(example_doc_1 rtamt)
target_link_libraries(example_doc_2 rtamt)
target_link_libraries(example_doc_3 rtamt)
target_link_libraries(example_doc_4 rtamt)
target_link_libraries(example_doc_5 rtamt)
target_link_libraries(example_doc_6 rtamt)
target_link_libraries(example_doc_7 rtamt)
target_link_libraries(example_doc_8 rtamt)
target_link_libraries(example_doc_9 rtamt)
target_link_libraries(example_doc_10 rtamt)
target_link_libraries(simple_spec_10000_iters rtamt)
target_link_libraries(simple_spec_inf_iters rtamt)
target_link_libraries(simple_spec_100000_iters rtamt)
target_link_libraries(simple_spec_1000000_iters rtamt)
target_link_libraries(past_tl_spec_1000000_iters rtamt)
target_link_libraries(past_tl_large_bounds_spec_100_iters rtamt)
target_link_libraries(future_tl_spec_1000000_iters rtamt)
target_link_libraries(req_gnt_bound_1_iters_10 rtamt)
target_link_libraries(req_gnt_bound_1_iters_1000 rtamt)
target_link_libraries(req_gnt_bound_1_iters_1000000 rtamt)
target_link_libraries(req_gnt_bound_10_iters_10 rtamt)
target_link_libraries(req_gnt_bound_10_iters_1000 rtamt)
target_link_libraries(req_gnt_bound_10_iters_1000000 rtamt)
target_link_libraries(req_gnt_bound_1000_iters_10 rtamt)
target_link_libraries(req_gnt_bound_1000_iters_1000 rtamt)
target_link_libraries(req_gnt_bound_1000_iters_10000 rtamt)
target_link_libraries(req_gnt_bound_1000_iters_1000000 rtamt)
target_link_libraries(req_gnt_bound_100000_iters_10 rtamt)
target_link_libraries(req_gnt_bound_1000000_iters_10 rtamt)
target_link_libraries(req_gnt_bound_1000000_iters_1000 rtamt)
